--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>webcam steeming</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>webcam streaming</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div class="wrapper">
     <div>
         <h1>Video from webCam</h1>
-        <video></video>
+        <video ></video>
     </div>
-
     <div>
         <h1>Video on Canvas</h1>
         <canvas></canvas>
     </div>
 
     <div>
-        <h1>Video from server</h1>
-        <img src="">
+        <h1> Video from Server</h1>
+        <img alt="" />
     </div>
 </div>
 <script src="js/main.js"></script>
